--- a/app/src/main/res/layout/fragment_preunit2.xml
+++ b/app/src/main/res/layout/fragment_preunit2.xml
@@ -28,7 +28,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Unit 2: Computer Architecture"
+                android:text="Unit 2"
+                android:textSize="@dimen/h1"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Computer Architecture"
                 android:textSize="@dimen/h1"
                 android:textStyle="bold" />
 
