--- a/app/src/main/res/layout/fragment_unit2.xml
+++ b/app/src/main/res/layout/fragment_unit2.xml
@@ -98,7 +98,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2 large company processing payroll data." />
+                        android:text="2. large company processing payroll data." />
 
                     <Spinner
                         android:id="@+id/unit2SpinnerWarmUp2"
@@ -226,7 +226,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=" 1."
+                    android:text="1."
                     android:textSize="@dimen/h2"
                     android:textStyle="bold" />
                 <EditText
@@ -1193,7 +1193,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=" 9."
+                    android:text="\t9."
                     android:textSize="@dimen/h2"
                     android:textStyle="bold" />
 
@@ -1301,13 +1301,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/bg_clear2"
+                android:background="@drawable/bg_clear3"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/padding8"
+                    android:layout_marginTop="@dimen/padding4"
+                    android:layout_marginBottom="@dimen/padding4"
                     android:text="@string/styleText94"
                     android:textSize="@dimen/h2"
                     android:textStyle="normal" />
@@ -1323,6 +1324,7 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/padding8"
                     android:gravity="center">
 
                     <Spinner
@@ -1771,6 +1773,13 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit"
                 android:focusable="auto" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stringEndLine"
+                android:textSize="@dimen/h2"
+                android:textStyle="normal" />
 
 
 
